@@ -1,6 +1,7 @@
 //////////////////////////////////////////////////////////////////////////
 //
 //  Copyright (c) 2007-2011, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2012, John Haddon. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -52,6 +53,8 @@ const std::string &versionString();
 
 /// Returns true if IECore was built with boost::asio support
 bool withASIO();
+/// Returns true if IECore was built with boost::signals support
+bool withSignals();
 /// Returns true if IECore was built with boost::math::factorial support
 bool withBoostFactorial();
 /// Returns true if IECore was built with TIFF support
