@@ -1,6 +1,7 @@
 //////////////////////////////////////////////////////////////////////////
 //
 //  Copyright (c) 2007-2008, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2012, John Haddon. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -67,6 +68,15 @@ const std::string &versionString()
 bool withASIO()
 {
 #ifdef IECORE_WITH_ASIO
+	return true;
+#else
+	return false;
+#endif
+}
+
+bool withSignals()
+{
+#ifdef IECORE_WITH_SIGNALS
 	return true;
 #else
 	return false;
